add comments to readme

--- a/readme
+++ b/readme
@@ -2,3 +2,7 @@ Nicholas Terra
 
 *Created augmented class diagram in UML. Outlined the associations and aggregations of the classes as well as inherited classes.
 *Was in charge of determining the role of session, conference and presentation.
+
+James Spahlinger
+
+* I like the projects. I wish we had a group meeting before or after the exam in class on thursday before spring break.
