--- a/readme
+++ b/readme
@@ -1,7 +1,8 @@
 Nicholas Terra
 
 *Created augmented class diagram in UML. Outlined the associations and aggregations of the classes as well as inherited classes.
-*Was in charge of determining the role of session, conference and presentation.
+*Was in charge of determining the role of session, conference and presentation. 
+As for group work in general, I think everyone had an idea of how they wanted to contribute andhad no problem in letting others knew what they could and couldn't do. 
 
 James Spahlinger
 
